# Api-testing-framework

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .secrets.baseline  Dockerfile  EXECUTION_GUIDE.md  IMPLEMENTATION_PLAN.md  Makefile  PORTFOLIO.md  README.md  conftest.py  docker-compose.yml  pyproject.toml  pytest.ini  requirements-perf.txt  requirements.txt
.github/workflows/: api-tests.yml
config/: settings.py
k8s/: test-job.yaml
src/client/: base_client.py  booking_client.py
src/models/: booking.py
src/utils/: circuit_breaker.py  circuit_breaker_redis.py  data_factory.py  logger.py
tests/contract/: test_schema_contracts.py
tests/functional/: test_auth_edge_cases.py  test_bookings_crud.py  test_canary.py
tests/performance/: locustfile.py
tests/unit/: test_logger_masking.py  test_retry_and_breaker.py
